Adds a badge that gets the latest github tag.

--- a/try.html
+++ b/try.html
@@ -160,6 +160,10 @@ I made the GitHub Badge Service.
   <td><img src='/cocoapods/v/AFNetworking.svg' alt='' /></td>
   <td><code>http://img.shields.io/cocoapods/v/AFNetworking.svg</code></td>
   </tr>
+  <tr><th> GitHub tag: </th>
+  <td><img src='/github/tag/visionmedia/express.svg' alt=''/></td>
+  <td><code>http://img.shields.io/github/tag/visionmedia/express.svg</code></td>
+  </tr>
 </tbody></table>
 
 <h2> Like This? </h2>
