[website] fixed contributor name.

--- a/try.html
+++ b/try.html
@@ -237,7 +237,7 @@ All the activity and the code sits
   <img alt='hughsk' src='https://gravatar.com/avatar/133cd05eb39521d55fb7a08c787925e2'>
 </a>
 <a class='photo' href='https://github.com/qubyte'>
-  <img alt='hughsk' src='https://gravatar.com/avatar/2b8729c02bc2fb886b32ed23cb7b0a31'>
+  <img alt='qubyte' src='https://gravatar.com/avatar/2b8729c02bc2fb886b32ed23cb7b0a31'>
 </a>
 
 <p><small>:wq</small></p>
