--- a/index.html
+++ b/index.html
@@ -160,6 +160,14 @@ I made the GitHub Badge Service.
   <td><img src='//img.shields.io/cocoapods/v/AFNetworking.svg' alt='' /></td>
   <td><code>http://img.shields.io/cocoapods/v/AFNetworking.svg</code></td>
   </tr>
+  <tr><th> GitHub tag: </th>
+  <td><img src='//img.shields.io/github/tag/visionmedia/express.svg' alt=''/></td>
+  <td><code>http://img.shields.io/github/tag/visionmedia/express.svg</code></td>
+  </tr>
+  <tr><th> GitHub release: </th>
+  <td><img src='//img.shields.io/github/release/qubyte/rubidium.svg' alt=''/></td>
+  <td><code>http://img.shields.io/github/release/qubyte/rubidium.svg</code></td>
+  </tr>
 </tbody></table>
 
 <h2> Like This? </h2>
@@ -227,6 +235,9 @@ All the activity and the code sits
 </a>
 <a class='photo' href='https://github.com/hughsk'>
   <img alt='hughsk' src='https://gravatar.com/avatar/133cd05eb39521d55fb7a08c787925e2'>
+</a>
+<a class='photo' href='https://github.com/qubyte'>
+  <img alt='qubyte' src='https://gravatar.com/avatar/2b8729c02bc2fb886b32ed23cb7b0a31'>
 </a>
 
 <p><small>:wq</small></p>
