Allow any property that is a number to be shown from WikiApiary.

--- a/index.html
+++ b/index.html
@@ -119,6 +119,11 @@ I made the GitHub Badge Service.
   <td><img src='//img.shields.io/gemnasium/mathiasbynens/he.svg' alt=''/></td>
   <td><code>http://img.shields.io/gemnasium/mathiasbynens/he.svg</code></td>
   </tr>
+  </tr>
+  <tr><th> WikiApiary: </th>
+  <td><img src='//img.shields.io/wikiapiary/Extension:Semantic%20MediaWiki.svg' alt=''/></td>
+  <td><code>http://img.shields.io/wikiapiary/Extension:Semantic%20MediaWiki.svg</code></td>
+  </tr>
 </tbody></table>
 <h3> Downloads </h3>
 <table><tbody>
