--- a/try.html
+++ b/try.html
@@ -115,6 +115,10 @@ I made the GitHub Badge Service.
   <td><img src='/codeclimate/github/kabisaict/flow.svg' alt=''/></td>
   <td><code>http://img.shields.io/codeclimate/github/kabisaict/flow.svg</code></td>
   </tr>
+  <tr><th> Code Climate: </th>
+  <td><img src='/codeclimate/coverage/github/triAGENS/ashikawa-core.svg' alt=''/></td>
+  <td><code>http://img.shields.io/codeclimate/coverage/github/triAGENS/ashikawa-core.svg</code></td>
+  </tr>
   <tr><th> Gemnasium: </th>
   <td><img src='/gemnasium/mathiasbynens/he.svg' alt=''/></td>
   <td><code>http://img.shields.io/gemnasium/mathiasbynens/he.svg</code></td>
