--- a/index.html
+++ b/index.html
@@ -123,6 +123,10 @@ I made the GitHub Badge Service.
   <td><img src='//img.shields.io/gemnasium/mathiasbynens/he.svg' alt=''/></td>
   <td><code>http://img.shields.io/gemnasium/mathiasbynens/he.svg</code></td>
   </tr>
+  <tr><th> Packagist: </th>
+  <td><img src='//img.shields.io/packagist/l/doctrine/orm.svg' alt=''/></td>
+  <td><code>http://img.shields.io/packagist/l/doctrine/orm.svg</code></td>
+  </tr>
 </tbody></table>
 <h3> Downloads </h3>
 <table><tbody>
