Omit needless domain sharding number.

--- a/try.html
+++ b/try.html
@@ -208,7 +208,7 @@ All the activity and the code sits
   <img alt='jmalloc' src='https://gravatar.com/avatar/7a6666c5798fb54d1d4ebde0600567f3'>
 </a>
 <a class='photo' href='https://github.com/alrra'>
-  <img alt='alrra' src='https://avatars2.githubusercontent.com/u/1223565?s=80'>
+  <img alt='alrra' src='https://avatars.githubusercontent.com/u/1223565?s=80'>
 </a>
 <a class='photo' href='https://github.com/ezzatron'>
   <img alt='ezzatron' src='https://gravatar.com/avatar/95ce5a53e68fe5287fadde649da8c6c7'>
