Added all contributors.

--- a/try.html
+++ b/try.html
@@ -213,6 +213,21 @@ All the activity and the code sits
 <a class='photo' href='https://github.com/ezzatron'>
   <img alt='ezzatron' src='https://gravatar.com/avatar/95ce5a53e68fe5287fadde649da8c6c7'>
 </a>
+<a class='photo' href='https://github.com/brettcannon'>
+  <img alt='brettcannon' src='https://avatars.githubusercontent.com/u/54418?s=80'>
+</a>
+<a class='photo' href='https://github.com/seanlinsley'>
+  <img alt='seanlinsley' src='https://avatars.githubusercontent.com/u/688886?s=80'>
+</a>
+<a class='photo' href='https://github.com/CodeBlock'>
+  <img alt='CodeBlock' src='https://avatars.githubusercontent.com/u/43930?s=80'>
+</a>
+<a class='photo' href='https://github.com/akashivskyy'>
+  <img alt='akashivskyy' src='https://avatars.githubusercontent.com/u/565231?s=80'>
+</a>
+<a class='photo' href='https://github.com/rmasters'>
+  <img alt='rmasters' src='https://avatars.githubusercontent.com/u/34284?s=80'>
+</a>
 <br>
 <a class='photo' href='https://github.com/nathany'>
   <img alt='nathany' src='https://gravatar.com/avatar/7d0978b275a362d11283396a929aee65'>
