[website] new contributors.

--- a/index.html
+++ b/index.html
@@ -208,10 +208,25 @@ All the activity and the code sits
   <img alt='jmalloc' src='https://gravatar.com/avatar/7a6666c5798fb54d1d4ebde0600567f3'>
 </a>
 <a class='photo' href='https://github.com/alrra'>
-  <img alt='alrra' src='https://gravatar.com/avatar/2fc3f42c9411898f83f3af8ede902591'>
+  <img alt='alrra' src='https://avatars.githubusercontent.com/u/1223565?s=80'>
 </a>
 <a class='photo' href='https://github.com/ezzatron'>
   <img alt='ezzatron' src='https://gravatar.com/avatar/95ce5a53e68fe5287fadde649da8c6c7'>
+</a>
+<a class='photo' href='https://github.com/brettcannon'>
+  <img alt='brettcannon' src='https://avatars.githubusercontent.com/u/54418?s=80'>
+</a>
+<a class='photo' href='https://github.com/seanlinsley'>
+  <img alt='seanlinsley' src='https://avatars.githubusercontent.com/u/688886?s=80'>
+</a>
+<a class='photo' href='https://github.com/CodeBlock'>
+  <img alt='CodeBlock' src='https://avatars.githubusercontent.com/u/43930?s=80'>
+</a>
+<a class='photo' href='https://github.com/akashivskyy'>
+  <img alt='akashivskyy' src='https://avatars.githubusercontent.com/u/565231?s=80'>
+</a>
+<a class='photo' href='https://github.com/rmasters'>
+  <img alt='rmasters' src='https://avatars.githubusercontent.com/u/34284?s=80'>
 </a>
 <br>
 <a class='photo' href='https://github.com/nathany'>
