Document the use of week and day downloads for PyPI

--- a/index.html
+++ b/index.html
@@ -138,6 +138,14 @@ I made the GitHub Badge Service.
   <td><img src='//img.shields.io/pypi/dm/Django.svg' alt=''/></td>
   <td><code>http://img.shields.io/pypi/dm/Django.svg</code></td>
   </tr>
+  <tr><th> PyPI: </th>
+  <td><img src='//img.shields.io/pypi/dw/Django.svg' alt=''/></td>
+  <td><code>http://img.shields.io/pypi/dw/Django.svg</code></td>
+  </tr>
+  <tr><th> PyPI: </th>
+  <td><img src='//img.shields.io/pypi/dd/Django.svg' alt=''/></td>
+  <td><code>http://img.shields.io/pypi/dd/Django.svg</code></td>
+  </tr>
   <tr><th> Packagist: </th>
   <td><img src='//img.shields.io/packagist/dm/doctrine/orm.svg' alt=''/></td>
   <td><code>http://img.shields.io/packagist/dm/doctrine/orm.svg</code></td>
