Update HTML pages

--- a/try.html
+++ b/try.html
@@ -184,6 +184,10 @@ I made the GitHub Badge Service.
   <td><img src='/github/release/qubyte/rubidium.svg' alt=''/></td>
   <td><code>http://img.shields.io/github/release/qubyte/rubidium.svg</code></td>
   </tr>
+  <tr><th> Chef cookbook: </th>
+  <td><img src='//img.shields.io/cookbook/v/chef-sugar.svg' alt=''/></td>
+  <td><code>http://img.shields.io/cookbook/v/chef-sugar.svg</code></td>
+  </tr>
 </tbody></table>
 
 <h2> Like This? </h2>
@@ -285,3 +289,4 @@ function makeImage() {
   document.location = url;
 }
 </script>
+
