Fixed try.html (Chef support).

--- a/try.html
+++ b/try.html
@@ -185,7 +185,7 @@ I made the GitHub Badge Service.
   <td><code>http://img.shields.io/github/release/qubyte/rubidium.svg</code></td>
   </tr>
   <tr><th> Chef cookbook: </th>
-  <td><img src='//img.shields.io/cookbook/v/chef-sugar.svg' alt=''/></td>
+  <td><img src='/cookbook/v/chef-sugar.svg' alt=''/></td>
   <td><code>http://img.shields.io/cookbook/v/chef-sugar.svg</code></td>
   </tr>
 </tbody></table>
