--- a/try.html
+++ b/try.html
@@ -190,6 +190,22 @@ I made the GitHub Badge Service.
   </tr>
 </tbody></table>
 
+<h3> Flat Style </h3>
+<table><tbody>
+  <td><img src='/travis/joyent/node.svg?style=flat' alt=''/></td>
+  <td><code>http://img.shields.io/travis/joyent/node.svg?style=flat</code></td>
+  </tr>
+  <td><img src='/travis/joyent/node/v0.6.svg?style=flat' alt=''/></td>
+  <td><code>http://img.shields.io/travis/joyent/node/v0.6.svg?style=flat</code></td>
+  </tr>
+  <td><img src='/gittip/JSFiddle.svg?style=flat' alt=''/></td>
+  <td><code>http://img.shields.io/gittip/JSFiddle.svg?style=flat</code></td>
+  </tr>
+  <td><img src='/coveralls/jekyll/jekyll.svg?style=flat' alt=''/></td>
+  <td><code>http://img.shields.io/coveralls/jekyll/jekyll.svg?style=flat</code></td>
+  </tr>
+</tbody></table>
+
 <h2> Like This? </h2>
 
 <p>
