add myself to contributors list at bottom

--- a/try.html
+++ b/try.html
@@ -290,6 +290,9 @@ All the activity and the code sits
 <a class='photo' href='https://github.com/qubyte'>
   <img alt='qubyte' src='https://gravatar.com/avatar/2b8729c02bc2fb886b32ed23cb7b0a31'>
 </a>
+<a class='photo' href='https://github.com/maxogden'>
+  <img alt='maxogden' src='https://avatars1.githubusercontent.com/u/39759?s=80'>
+</a>
 
 <p><small>:wq</small></p>
 <script>
