Update index.html to match try.html

--- a/index.html
+++ b/index.html
@@ -190,6 +190,22 @@ I made the GitHub Badge Service.
   </tr>
 </tbody></table>
 
+<h3> Flat Style </h3>
+<table><tbody>
+  <td><img src='//img.shields.io/travis/joyent/node.svg?style=flat' alt=''/></td>
+  <td><code>http://img.shields.io/travis/joyent/node.svg?style=flat</code></td>
+  </tr>
+  <td><img src='//img.shields.io/travis/joyent/node/v0.6.svg?style=flat' alt=''/></td>
+  <td><code>http://img.shields.io/travis/joyent/node/v0.6.svg?style=flat</code></td>
+  </tr>
+  <td><img src='//img.shields.io/gittip/JSFiddle.svg?style=flat' alt=''/></td>
+  <td><code>http://img.shields.io/gittip/JSFiddle.svg?style=flat</code></td>
+  </tr>
+  <td><img src='//img.shields.io/coveralls/jekyll/jekyll.svg?style=flat' alt=''/></td>
+  <td><code>http://img.shields.io/coveralls/jekyll/jekyll.svg?style=flat</code></td>
+  </tr>
+</tbody></table>
+
 <h2> Like This? </h2>
 
 <p>
@@ -273,6 +289,9 @@ All the activity and the code sits
 </a>
 <a class='photo' href='https://github.com/qubyte'>
   <img alt='qubyte' src='https://gravatar.com/avatar/2b8729c02bc2fb886b32ed23cb7b0a31'>
+</a>
+<a class='photo' href='https://github.com/maxogden'>
+  <img alt='maxogden' src='https://avatars1.githubusercontent.com/u/39759?s=80'>
 </a>
 
 <p><small>:wq</small></p>
