Adjust casing of Nuget to NuGet

--- a/try.html
+++ b/try.html
@@ -188,7 +188,7 @@ I made the GitHub Badge Service.
   <td><img src='/cookbook/v/chef-sugar.svg' alt=''/></td>
   <td><code>http://img.shields.io/cookbook/v/chef-sugar.svg</code></td>
   </tr>
-  <tr><th> Nuget: </th>
+  <tr><th> NuGet: </th>
   <td><img src='/nuget/v/Nuget.Core.svg' alt=''/></td>
   <td><code>http://img.shields.io/nuget/v/Nuget.Core.svg</code></td>
   </tr>
