Update website to match try.html.

--- a/index.html
+++ b/index.html
@@ -188,6 +188,10 @@ I made the GitHub Badge Service.
   <td><img src='//img.shields.io/cookbook/v/chef-sugar.svg' alt=''/></td>
   <td><code>http://img.shields.io/cookbook/v/chef-sugar.svg</code></td>
   </tr>
+  <tr><th> NuGet: </th>
+  <td><img src='//img.shields.io/nuget/v/Nuget.Core.svg' alt=''/></td>
+  <td><code>http://img.shields.io/nuget/v/Nuget.Core.svg</code></td>
+  </tr>
 </tbody></table>
 
 <h3> Flat Style </h3>
@@ -256,10 +260,10 @@ All the activity and the code sits
 <a class='photo' href='https://github.com/rmasters'>
   <img alt='rmasters' src='https://avatars.githubusercontent.com/u/34284?s=80'>
 </a>
-<br>
 <a class='photo' href='https://github.com/nathany'>
   <img alt='nathany' src='https://gravatar.com/avatar/7d0978b275a362d11283396a929aee65'>
 </a>
+<br>
 <a class='photo' href='https://github.com/whit537'>
   <img alt='whit537' src='https://gravatar.com/avatar/fb054b407a6461e417ee6b6ae084da37'>
 </a>
@@ -293,6 +297,9 @@ All the activity and the code sits
 <a class='photo' href='https://github.com/maxogden'>
   <img alt='maxogden' src='https://avatars1.githubusercontent.com/u/39759?s=80'>
 </a>
+<a class='photo' href='https://github.com/avanderhoorn'>
+  <img alt='avanderhoorn' src='https://www.gravatar.com/avatar/6af12b64c2fe22af3b27848b8eedd992'>
+</a>
 
 <p><small>:wq</small></p>
 <script>
@@ -308,4 +315,3 @@ function makeImage() {
   document.location = url;
 }
 </script>
-
