Adds TeamCity CodeBetter release badge

--- a/try.html
+++ b/try.html
@@ -91,10 +91,6 @@ I made the GitHub Badge Service.
 
 <h3> Miscellaneous </h3>
 <table><tbody>
-  <tr><th> Travis: </th>
-  <td><img src='/travis/joyent/node.svg' alt=''/></td>
-  <td><code>http://img.shields.io/travis/joyent/node.svg</code></td>
-  </tr>
   <tr><th> Travis branch: </th>
   <td><img src='/travis/joyent/node/v0.6.svg' alt=''/></td>
   <td><code>http://img.shields.io/travis/joyent/node/v0.6.svg</code></td>
@@ -126,6 +122,17 @@ I made the GitHub Badge Service.
   <tr><th> Packagist: </th>
   <td><img src='/packagist/l/doctrine/orm.svg' alt=''/></td>
   <td><code>http://img.shields.io/packagist/l/doctrine/orm.svg</code></td>
+  </tr>
+</tbody></table>
+<h3> Build </h3>
+<table><tbody>
+  <tr><th> Travis: </th>
+  <td><img src='/travis/joyent/node.svg' alt=''/></td>
+  <td><code>http://img.shields.io/travis/joyent/node.svg</code></td>
+  </tr>
+  <tr><th> TeamCity CodeBetter: </th>
+  <td><img src='/teamcity/codebetter/bt428.svg' alt=''/></td>
+  <td><code>http://img.shields.io/teamcity/codebetter/bt428.svg</code></td>
   </tr>
 </tbody></table>
 <h3> Downloads </h3>
