Total and daily downloads for Packagist.
Fixes #167.

--- a/try.html
+++ b/try.html
@@ -157,6 +157,14 @@ I made the GitHub Badge Service.
   <td><img src='/packagist/dm/doctrine/orm.svg' alt=''/></td>
   <td><code>http://img.shields.io/packagist/dm/doctrine/orm.svg</code></td>
   </tr>
+  <tr><th> Packagist: </th>
+  <td><img src='/packagist/dd/doctrine/orm.svg' alt=''/></td>
+  <td><code>http://img.shields.io/packagist/dd/doctrine/orm.svg</code></td>
+  </tr>
+  <tr><th> Packagist: </th>
+  <td><img src='/packagist/dt/doctrine/orm.svg' alt=''/></td>
+  <td><code>http://img.shields.io/packagist/dt/doctrine/orm.svg</code></td>
+  </tr>
 </tbody></table>
 <h3> Version </h3>
 <table><tbody>
