--- a/try.html
+++ b/try.html
@@ -207,6 +207,10 @@ I made the GitHub Badge Service.
   <td><img src='/nuget/v/Nuget.Core.svg' alt=''/></td>
   <td><code>http://img.shields.io/nuget/v/Nuget.Core.svg</code></td>
   </tr>
+  <tr><th> Puppet Forge: </th>
+  <td><img src='/puppetforge/v/vStone/percona.svg' alt=''/></td>
+  <td><code>http://img.shields.io/puppetforge/v/vStone/percona.svg</code></td>
+  </tr>
 </tbody></table>
 
 <h3> Flat Style </h3>
