Add TeamCity code coverage

--- a/try.html
+++ b/try.html
@@ -119,6 +119,10 @@ I made the GitHub Badge Service.
   <td><img src='/packagist/l/doctrine/orm.svg' alt=''/></td>
   <td><code>http://img.shields.io/packagist/l/doctrine/orm.svg</code></td>
   </tr>
+  <tr><th> TeamCity CodeBetter Coverage: </th>
+  <td><img src='/teamcity/codebetter/bt1242/coverage.svg' alt=''/></td>
+  <td><code>http://img.shields.io/teamcity/codebetter/bt1242/coverage.svg</code></td>
+  </tr>
 </tbody></table>
 <h3> Build </h3>
 <table><tbody>
