Add NuGet download count

--- a/try.html
+++ b/try.html
@@ -145,6 +145,10 @@ I made the GitHub Badge Service.
   <td><img src='/npm/dm/localeval.svg' alt=''/></td>
   <td><code>http://img.shields.io/npm/dm/localeval.svg</code></td>
   </tr>
+  <tr><th> NuGet: </th>
+  <td><img src='/nuget/dt/Microsoft.AspNet.Mvc.svg' alt=''/></td>
+  <td><code>http://img.shields.io/nuget/dt/Microsoft.AspNet.Mvc.svg</code></td>
+  </tr>
   <tr><th> PyPI: </th>
   <td><img src='/pypi/dm/Django.svg' alt=''/></td>
   <td><code>http://img.shields.io/pypi/dm/Django.svg</code></td>
