--- a/index.html
+++ b/index.html
@@ -141,6 +141,10 @@ I made the GitHub Badge Service.
   <td><img src='//img.shields.io/npm/dm/localeval.svg' alt=''/></td>
   <td><code>http://img.shields.io/npm/dm/localeval.svg</code></td>
   </tr>
+  <tr><th> NuGet: </th>
+  <td><img src='//img.shields.io/nuget/dt/Microsoft.AspNet.Mvc.svg' alt=''/></td>
+  <td><code>http://img.shields.io/nuget/dt/Microsoft.AspNet.Mvc.svg</code></td>
+  </tr>
   <tr><th> PyPI: </th>
   <td><img src='//img.shields.io/pypi/dm/Django.svg' alt=''/></td>
   <td><code>http://img.shields.io/pypi/dm/Django.svg</code></td>
@@ -206,6 +210,10 @@ I made the GitHub Badge Service.
   <tr><th> NuGet: </th>
   <td><img src='//img.shields.io/nuget/v/Nuget.Core.svg' alt=''/></td>
   <td><code>http://img.shields.io/nuget/v/Nuget.Core.svg</code></td>
+  </tr>
+  <tr><th> Puppet Forge: </th>
+  <td><img src='//img.shields.io/puppetforge/v/vStone/percona.svg' alt=''/></td>
+  <td><code>http://img.shields.io/puppetforge/v/vStone/percona.svg</code></td>
   </tr>
 </tbody></table>
 
