Add examples for CocoaPods badges.

--- a/try.html
+++ b/try.html
@@ -119,6 +119,14 @@ I made the GitHub Badge Service.
   <td><img src='/packagist/l/doctrine/orm.svg' alt=''/></td>
   <td><code>http://img.shields.io/packagist/l/doctrine/orm.svg</code></td>
   </tr>
+  <tr><th> CocoaPods: </th>
+  <td><img src='/cocoapods/l/AFNetworking.svg' alt='' /></td>
+  <td><code>http://img.shields.io/cocoapods/l/AFNetworking.svg</code></td>
+  </tr>
+  <tr><th> CocoaPods: </th>
+  <td><img src='/cocoapods/p/AFNetworking.svg' alt='' /></td>
+  <td><code>http://img.shields.io/cocoapods/p/AFNetworking.svg</code></td>
+  </tr>
   <tr><th> TeamCity CodeBetter Coverage: </th>
   <td><img src='/teamcity/codebetter/bt1242/coverage.svg' alt=''/></td>
   <td><code>http://img.shields.io/teamcity/codebetter/bt1242/coverage.svg</code></td>
