--- a/index.html
+++ b/index.html
@@ -95,14 +95,6 @@ I made the GitHub Badge Service.
   <td><img src='//img.shields.io/gittip/JSFiddle.svg' alt=''/></td>
   <td><code>http://img.shields.io/gittip/JSFiddle.svg</code></td>
   </tr>
-  <tr><th> Coveralls: </th>
-  <td><img src='//img.shields.io/coveralls/jekyll/jekyll.svg' alt=''/></td>
-  <td><code>http://img.shields.io/coveralls/jekyll/jekyll.svg</code></td>
-  </tr>
-  <tr><th> Coveralls branch: </th>
-  <td><img src='//img.shields.io/coveralls/jekyll/jekyll/master.svg' alt=''/></td>
-  <td><code>http://img.shields.io/coveralls/jekyll/jekyll/master.svg</code></td>
-  </tr>
   <tr><th> Code Climate: </th>
   <td><img src='//img.shields.io/codeclimate/github/kabisaict/flow.svg' alt=''/></td>
   <td><code>http://img.shields.io/codeclimate/github/kabisaict/flow.svg</code></td>
@@ -119,6 +111,14 @@ I made the GitHub Badge Service.
   <td><img src='//img.shields.io/packagist/l/doctrine/orm.svg' alt=''/></td>
   <td><code>http://img.shields.io/packagist/l/doctrine/orm.svg</code></td>
   </tr>
+  <tr><th> CocoaPods: </th>
+  <td><img src='//img.shields.io/cocoapods/l/AFNetworking.svg' alt='' /></td>
+  <td><code>http://img.shields.io/cocoapods/l/AFNetworking.svg</code></td>
+  </tr>
+  <tr><th> CocoaPods: </th>
+  <td><img src='//img.shields.io/cocoapods/p/AFNetworking.svg' alt='' /></td>
+  <td><code>http://img.shields.io/cocoapods/p/AFNetworking.svg</code></td>
+  </tr>
 </tbody></table>
 <h3> Build </h3>
 <table><tbody>
@@ -133,6 +133,18 @@ I made the GitHub Badge Service.
   <tr><th> TeamCity CodeBetter: </th>
   <td><img src='//img.shields.io/teamcity/codebetter/bt428.svg' alt=''/></td>
   <td><code>http://img.shields.io/teamcity/codebetter/bt428.svg</code></td>
+  </tr>
+  <tr><th> Coveralls: </th>
+  <td><img src='//img.shields.io/coveralls/jekyll/jekyll.svg' alt=''/></td>
+  <td><code>http://img.shields.io/coveralls/jekyll/jekyll.svg</code></td>
+  </tr>
+  <tr><th> Coveralls branch: </th>
+  <td><img src='//img.shields.io/coveralls/jekyll/jekyll/master.svg' alt=''/></td>
+  <td><code>http://img.shields.io/coveralls/jekyll/jekyll/master.svg</code></td>
+  </tr>
+  <tr><th> TeamCity CodeBetter Coverage: </th>
+  <td><img src='//img.shields.io/teamcity/coverage/bt1242.svg' alt=''/></td>
+  <td><code>http://img.shields.io/teamcity/coverage/bt1242.svg</code></td>
   </tr>
 </tbody></table>
 <h3> Downloads </h3>
