Add Issues table in try.html

--- a/try.html
+++ b/try.html
@@ -229,6 +229,14 @@ I made the GitHub Badge Service.
   </tr>
 </tbody></table>
 
+<h3> Issues </h3>
+<table><tbody>
+  <tr><th> GitHub: </th>
+  <td><img src='/github/issues/badges/shields.svg' alt=''/></td>
+  <td><code>http://img.shields.io/github/issues/badges/shields.svg</code></td>
+  </tr>
+</tbody></table>
+
 <h3> Flat Style </h3>
 <table><tbody>
   <td><img src='/travis/joyent/node.svg?style=flat' alt=''/></td>
