Add Scrutinizer code quality to try.html

--- a/try.html
+++ b/try.html
@@ -146,6 +146,9 @@ I made the GitHub Badge Service.
   <td><img src='/teamcity/coverage/bt1242.svg' alt=''/></td>
   <td><code>http://img.shields.io/teamcity/coverage/bt1242.svg</code></td>
   </tr>
+  <tr><th> Scrutinizer: </th>
+  <td><img src='/scrutinizer/g/filp/whoops.svg' alt=''/></td>
+  <td><code>http://img.shields.io/scrutinizer/g/filp/whoops.svg</code></td>
 </tbody></table>
 <h3> Downloads </h3>
 <table><tbody>
