--- a/try.html
+++ b/try.html
@@ -134,6 +134,10 @@ I made the GitHub Badge Service.
   <td><img src='/teamcity/codebetter/bt428.svg' alt=''/></td>
   <td><code>http://img.shields.io/teamcity/codebetter/bt428.svg</code></td>
   </tr>
+  <tr><th> AppVeyor: </th>
+  <td><img src='/appveyor/ci/gruntjs/grunt.svg' alt=''/></td>
+  <td><code>http://img.shields.io/appveyor/ci/gruntjs/grunt.svg</code></td>
+  </tr>
   <tr><th> Coveralls: </th>
   <td><img src='/coveralls/jekyll/jekyll.svg' alt=''/></td>
   <td><code>http://img.shields.io/coveralls/jekyll/jekyll.svg</code></td>
