Added AppVeyor to the website.

--- a/index.html
+++ b/index.html
@@ -134,6 +134,10 @@ I made the GitHub Badge Service.
   <td><img src='//img.shields.io/teamcity/codebetter/bt428.svg' alt=''/></td>
   <td><code>http://img.shields.io/teamcity/codebetter/bt428.svg</code></td>
   </tr>
+  <tr><th> AppVeyor: </th>
+  <td><img src='//img.shields.io/appveyor/ci/gruntjs/grunt.svg' alt=''/></td>
+  <td><code>http://img.shields.io/appveyor/ci/gruntjs/grunt.svg</code></td>
+  </tr>
   <tr><th> Coveralls: </th>
   <td><img src='//img.shields.io/coveralls/jekyll/jekyll.svg' alt=''/></td>
   <td><code>http://img.shields.io/coveralls/jekyll/jekyll.svg</code></td>
@@ -146,6 +150,9 @@ I made the GitHub Badge Service.
   <td><img src='//img.shields.io/teamcity/coverage/bt1242.svg' alt=''/></td>
   <td><code>http://img.shields.io/teamcity/coverage/bt1242.svg</code></td>
   </tr>
+  <tr><th> Scrutinizer: </th>
+  <td><img src='//img.shields.io/scrutinizer/g/filp/whoops.svg' alt=''/></td>
+  <td><code>http://img.shields.io/scrutinizer/g/filp/whoops.svg</code></td>
 </tbody></table>
 <h3> Downloads </h3>
 <table><tbody>
@@ -226,6 +233,14 @@ I made the GitHub Badge Service.
   <tr><th> Puppet Forge: </th>
   <td><img src='//img.shields.io/puppetforge/v/vStone/percona.svg' alt=''/></td>
   <td><code>http://img.shields.io/puppetforge/v/vStone/percona.svg</code></td>
+  </tr>
+</tbody></table>
+
+<h3> Issues </h3>
+<table><tbody>
+  <tr><th> GitHub: </th>
+  <td><img src='//img.shields.io/github/issues/badges/shields.svg' alt=''/></td>
+  <td><code>http://img.shields.io/github/issues/badges/shields.svg</code></td>
   </tr>
 </tbody></table>
 
