Add support for david

--- a/index.html
+++ b/index.html
@@ -107,6 +107,10 @@ I made the GitHub Badge Service.
   <td><img src='//img.shields.io/gemnasium/mathiasbynens/he.svg' alt=''/></td>
   <td><code>http://img.shields.io/gemnasium/mathiasbynens/he.svg</code></td>
   </tr>
+  <tr><th> David: </th>
+  <td><img src='//img.shields.io/david/visionmedia/express.svg' alt=''/></td>
+  <td><code>http://img.shields.io/david/visionmedia/express.svg</code></td>
+  </tr>
   <tr><th> Packagist: </th>
   <td><img src='//img.shields.io/packagist/l/doctrine/orm.svg' alt=''/></td>
   <td><code>http://img.shields.io/packagist/l/doctrine/orm.svg</code></td>
