--- a/try.html
+++ b/try.html
@@ -161,6 +161,9 @@ I made the GitHub Badge Service.
   <tr><th> Scrutinizer: </th>
   <td><img src='/scrutinizer/g/filp/whoops.svg' alt=''/></td>
   <td><code>http://img.shields.io/scrutinizer/g/filp/whoops.svg</code></td>
+  <tr><th> Scrutinizer Coverage: </th>
+  <td><img src='/scrutinizer/coverage/g/filp/whoops.svg' alt=''/></td>
+  <td><code>http://img.shields.io/scrutinizer/coverage/g/filp/whoops.svg</code></td>
 </tbody></table>
 <h3> Downloads </h3>
 <table><tbody>
