--- a/index.html
+++ b/index.html
@@ -175,6 +175,10 @@ I made the GitHub Badge Service.
   <td><img src='//img.shields.io/nuget/dt/Microsoft.AspNet.Mvc.svg' alt=''/></td>
   <td><code>http://img.shields.io/nuget/dt/Microsoft.AspNet.Mvc.svg</code></td>
   </tr>
+  <tr><th> Chocolatey: </th>
+  <td><img src='//img.shields.io/chocolatey/dt/scriptcs.svg' alt=''/></td>
+  <td><code>http://img.shields.io/chocolatey/dt/scriptcs.svg</code></td>
+  </tr>
   <tr><th> PyPI: </th>
   <td><img src='//img.shields.io/pypi/dm/Django.svg' alt=''/></td>
   <td><code>http://img.shields.io/pypi/dm/Django.svg</code></td>
@@ -240,6 +244,10 @@ I made the GitHub Badge Service.
   <tr><th> NuGet: </th>
   <td><img src='//img.shields.io/nuget/v/Nuget.Core.svg' alt=''/></td>
   <td><code>http://img.shields.io/nuget/v/Nuget.Core.svg</code></td>
+  </tr>
+  <tr><th> Chocolatey: </th>
+  <td><img src='//img.shields.io/chocolatey/v/git.svg' alt=''/></td>
+  <td><code>http://img.shields.io/chocolatey/v/git.svg</code></td>
   </tr>
   <tr><th> Puppet Forge: </th>
   <td><img src='//img.shields.io/puppetforge/v/vStone/percona.svg' alt=''/></td>
@@ -312,6 +320,7 @@ All the activity and the code sits
 <a class='photo' href='https://github.com/seanlinsley'>
   <img alt='seanlinsley' src='https://avatars.githubusercontent.com/u/688886?s=80'>
 </a>
+<br>
 <a class='photo' href='https://github.com/CodeBlock'>
   <img alt='CodeBlock' src='https://avatars.githubusercontent.com/u/43930?s=80'>
 </a>
@@ -324,7 +333,6 @@ All the activity and the code sits
 <a class='photo' href='https://github.com/nathany'>
   <img alt='nathany' src='https://gravatar.com/avatar/7d0978b275a362d11283396a929aee65'>
 </a>
-<br>
 <a class='photo' href='https://github.com/whit537'>
   <img alt='whit537' src='https://gravatar.com/avatar/fb054b407a6461e417ee6b6ae084da37'>
 </a>
@@ -340,6 +348,7 @@ All the activity and the code sits
 <a class='photo' href='https://github.com/cainus'>
   <img alt='cainus' src='https://gravatar.com/avatar/c8475420ebca73833e55ccf57d8d7500'>
 </a>
+<br>
 <a class='photo' href='https://github.com/jbowes'>
   <img alt='jbowes' src='https://gravatar.com/avatar/363ada7cda10d5eae5eeb7704278fb51'>
 </a>
@@ -360,6 +369,9 @@ All the activity and the code sits
 </a>
 <a class='photo' href='https://github.com/avanderhoorn'>
   <img alt='avanderhoorn' src='https://www.gravatar.com/avatar/6af12b64c2fe22af3b27848b8eedd992'>
+</a>
+<a class='photo' href='https://github.com/khellang'>
+  <img alt='khellang' src='https://gravatar.com/avatar/b3616645c168b0b8a65e109a6b1cb010'>
 </a>
 
 <p><small>:wq</small></p>
