--- a/try.html
+++ b/try.html
@@ -167,6 +167,14 @@ I made the GitHub Badge Service.
 </tbody></table>
 <h3> Downloads </h3>
 <table><tbody>
+  <tr><th> Gem </th>
+  <td><img src='/gem/dc/rails.svg' alt=''/></td>
+  <td><code>http://img.shields.io/gem/dc/rails.svg</code></td>
+  </tr>
+  <tr><th> Gem </th>
+  <td><img src='/gem/dc/rails/total.svg' alt=''/></td>
+  <td><code>http://img.shields.io/gem/dc/rails/total.svg</code></td>
+  </tr>
   <tr><th> npm: </th>
   <td><img src='/npm/dm/localeval.svg' alt=''/></td>
   <td><code>http://img.shields.io/npm/dm/localeval.svg</code></td>
