update gem downloads badge

--- a/try.html
+++ b/try.html
@@ -168,12 +168,12 @@ I made the GitHub Badge Service.
 <h3> Downloads </h3>
 <table><tbody>
   <tr><th> Gem </th>
-  <td><img src='/gem/dc/rails.svg' alt=''/></td>
-  <td><code>http://img.shields.io/gem/dc/rails.svg</code></td>
+  <td><img src='/gem/dtv/rails.svg' alt=''/></td>
+  <td><code>http://img.shields.io/gem/dtv/rails.svg</code></td>
   </tr>
   <tr><th> Gem </th>
-  <td><img src='/gem/dc/rails/total.svg' alt=''/></td>
-  <td><code>http://img.shields.io/gem/dc/rails/total.svg</code></td>
+  <td><img src='/gem/dt/rails.svg' alt=''/></td>
+  <td><code>http://img.shields.io/gem/dt/rails.svg</code></td>
   </tr>
   <tr><th> npm: </th>
   <td><img src='/npm/dm/localeval.svg' alt=''/></td>
