--- a/index.html
+++ b/index.html
@@ -167,6 +167,14 @@ I made the GitHub Badge Service.
 </tbody></table>
 <h3> Downloads </h3>
 <table><tbody>
+  <tr><th> Gem </th>
+  <td><img src='//img.shields.io/gem/dtv/rails.svg' alt=''/></td>
+  <td><code>http://img.shields.io/gem/dtv/rails.svg</code></td>
+  </tr>
+  <tr><th> Gem </th>
+  <td><img src='//img.shields.io/gem/dt/rails.svg' alt=''/></td>
+  <td><code>http://img.shields.io/gem/dt/rails.svg</code></td>
+  </tr>
   <tr><th> npm: </th>
   <td><img src='//img.shields.io/npm/dm/localeval.svg' alt=''/></td>
   <td><code>http://img.shields.io/npm/dm/localeval.svg</code></td>
