--- a/try.html
+++ b/try.html
@@ -167,6 +167,14 @@ I made the GitHub Badge Service.
 </tbody></table>
 <h3> Downloads </h3>
 <table><tbody>
+    <tr><th> Gem </th>
+  <td><img src='/gem/dv/rails/stable.svg' alt=''/></td>
+  <td><code>http://img.shields.io/gem/dv/rails/stable.svg</code></td>
+  </tr>
+    <tr><th> Gem </th>
+  <td><img src='/gem/dv/rails/4.1.0.svg' alt=''/></td>
+  <td><code>http://img.shields.io/gem/dv/rails/4.1.0.svg</code></td>
+  </tr>
   <tr><th> Gem </th>
   <td><img src='/gem/dtv/rails.svg' alt=''/></td>
   <td><code>http://img.shields.io/gem/dtv/rails.svg</code></td>
