Example for npm license badge.

--- a/try.html
+++ b/try.html
@@ -119,6 +119,10 @@ I made the GitHub Badge Service.
   <td><img src='/packagist/l/doctrine/orm.svg' alt=''/></td>
   <td><code>http://img.shields.io/packagist/l/doctrine/orm.svg</code></td>
   </tr>
+  <tr><th> npm: </th>
+  <td><img src='/npm/l/express.svg' alt=''/></td>
+  <td><code>http://img.shields.io/npm/l/express.svg</code></td>
+  </tr>
   <tr><th> CocoaPods: </th>
   <td><img src='/cocoapods/l/AFNetworking.svg' alt='' /></td>
   <td><code>http://img.shields.io/cocoapods/l/AFNetworking.svg</code></td>
