PyPI license: Example and color adjustments.
To fit with other licenses.

--- a/index.html
+++ b/index.html
@@ -123,6 +123,10 @@ I made the GitHub Badge Service.
   <td><img src='//img.shields.io/npm/l/express.svg' alt=''/></td>
   <td><code>http://img.shields.io/npm/l/express.svg</code></td>
   </tr>
+  <tr><th> PyPI: </th>
+  <td><img src='//img.shields.io/pypi/l/Django.svg' alt=''/></td>
+  <td><code>http://img.shields.io/pypi/l/Django.svg</code></td>
+  </tr>
   <tr><th> CocoaPods: </th>
   <td><img src='//img.shields.io/cocoapods/l/AFNetworking.svg' alt='' /></td>
   <td><code>http://img.shields.io/cocoapods/l/AFNetworking.svg</code></td>
@@ -131,11 +135,6 @@ I made the GitHub Badge Service.
   <td><img src='//img.shields.io/cocoapods/p/AFNetworking.svg' alt='' /></td>
   <td><code>http://img.shields.io/cocoapods/p/AFNetworking.svg</code></td>
   </tr>
-  <tr><th> PyPI (License): </th>
-  <td><img src='//img.shields.io/pypi/l/Django.svg' alt=''/></td>
-  <td><code>http://img.shields.io/pypi/l/Django.svg</code></td>
-  </tr>
-
 </tbody></table>
 <h3> Build </h3>
 <table><tbody>
