--- a/try.html
+++ b/try.html
@@ -123,6 +123,10 @@ I made the GitHub Badge Service.
   <td><img src='/npm/l/express.svg' alt=''/></td>
   <td><code>http://img.shields.io/npm/l/express.svg</code></td>
   </tr>
+  <tr><th> PyPI: </th>
+  <td><img src='/pypi/l/Django.svg' alt=''/></td>
+  <td><code>http://img.shields.io/pypi/l/Django.svg</code></td>
+  </tr>
   <tr><th> CocoaPods: </th>
   <td><img src='/cocoapods/l/AFNetworking.svg' alt='' /></td>
   <td><code>http://img.shields.io/cocoapods/l/AFNetworking.svg</code></td>
