Links to Twitter, Gittip, GitHub.

--- a/index.html
+++ b/index.html
@@ -321,6 +321,15 @@ I made the GitHub Badge Service.
 Tell your favorite badge service to use it! <br/>
 And tell us, we might be able to bring it to you anyway!
 </p>
+<p>
+<a href="https://twitter.com/Shields_io" class="twitter-follow-button"
+  data-show-count="false">Follow @Shields_io</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+<a href='https://www.gittip.com/Shields/'><img src='//img.shields.io/gittip/shields.svg?style=flat' alt='Tip us!'/></a>
+<iframe src="http://ghbtns.com/github-btn.html?user=badges&repo=shields&type=fork&count=true"
+  allowtransparency="true" frameborder="0" scrolling="0" width="95"
+  height="20"></iframe>
+</p>
 
 <h2> Origin </h2>
 
