Add hex.pm support

--- a/index.html
+++ b/index.html
@@ -131,6 +131,10 @@ I made the GitHub Badge Service.
   <td><img src='//img.shields.io/pypi/l/Django.svg' alt=''/></td>
   <td><code>http://img.shields.io/pypi/l/Django.svg</code></td>
   </tr>
+  <tr><th> Hex.pm: </th>
+  <td><img src='//img.shields.io/hexpm/l/poolboy.svg' alt=''/></td>
+  <td><code>http://img.shields.io/hexpm/l/poolboy.svg</code></td>
+  </tr>
   <tr><th> CocoaPods: </th>
   <td><img src='//img.shields.io/cocoapods/l/AFNetworking.svg' alt='' /></td>
   <td><code>http://img.shields.io/cocoapods/l/AFNetworking.svg</code></td>
@@ -227,6 +231,18 @@ I made the GitHub Badge Service.
   <td><img src='//img.shields.io/pypi/dd/Django.svg' alt=''/></td>
   <td><code>http://img.shields.io/pypi/dd/Django.svg</code></td>
   </tr>
+  <tr><th> Hex.pm: </th>
+  <td><img src='//img.shields.io/hexpm/dw/plug.svg' alt=''/></td>
+  <td><code>http://img.shields.io/hexpm/dw/plug.svg</code></td>
+  </tr>
+  <tr><th> Hex.pm: </th>
+  <td><img src='//img.shields.io/hexpm/dd/plug.svg' alt=''/></td>
+  <td><code>http://img.shields.io/hexpm/dd/plug.svg</code></td>
+  </tr>
+  <tr><th> Hex.pm: </th>
+  <td><img src='//img.shields.io/hexpm/dt/plug.svg' alt=''/></td>
+  <td><code>http://img.shields.io/hexpm/dt/plug.svg</code></td>
+  </tr>
   <tr><th> Packagist: </th>
   <td><img src='//img.shields.io/packagist/dm/doctrine/orm.svg' alt=''/></td>
   <td><code>http://img.shields.io/packagist/dm/doctrine/orm.svg</code></td>
@@ -253,6 +269,11 @@ I made the GitHub Badge Service.
   <tr><th> Gem: </th>
   <td><img src='//img.shields.io/gem/v/formatador.svg' alt=''/></td>
   <td><code>http://img.shields.io/gem/v/formatador.svg</code></td>
+  </tr>
+  <tr><th> Hex.pm: </th>
+  <td><img src='//img.shields.io/hexpm/v/plug.svg' alt=''/></td>
+  <td><code>http://img.shields.io/hexpm/v/plug.svg</code></td>
+  </tr>
   <tr><th> Hackage: </th>
   <td><img src='//img.shields.io/hackage/v/lens.svg' alt=''/></td>
   <td><code>http://img.shields.io/hackage/v/lens.svg</code></td>
