--- a/try.html
+++ b/try.html
@@ -211,6 +211,10 @@ I made the GitHub Badge Service.
   <td><img src='/nuget/dt/Microsoft.AspNet.Mvc.svg' alt=''/></td>
   <td><code>http://img.shields.io/nuget/dt/Microsoft.AspNet.Mvc.svg</code></td>
   </tr>
+  <tr><th> MyGet: </th>
+  <td><img src='/myget/yolodev/dt/FSharpSupport.svg' alt=''/></td>
+  <td><code>http://img.shields.io/myget/yolodev/dt/FSharpSupport.svg</code></td>
+  </tr>
   <tr><th> Chocolatey: </th>
   <td><img src='/chocolatey/dt/scriptcs.svg' alt=''/></td>
   <td><code>http://img.shields.io/chocolatey/dt/scriptcs.svg</code></td>
@@ -280,6 +284,10 @@ I made the GitHub Badge Service.
   <tr><th> NuGet: </th>
   <td><img src='/nuget/v/Nuget.Core.svg' alt=''/></td>
   <td><code>http://img.shields.io/nuget/v/Nuget.Core.svg</code></td>
+  </tr>
+  <tr><th> MyGet: </th>
+  <td><img src='/myget/yolodev/v/FSharpSupport.svg' alt=''/></td>
+  <td><code>http://img.shields.io/myget/yolodev/v/FSharpSupport.svg</code></td>
   </tr>
   <tr><th> Chocolatey: </th>
   <td><img src='/chocolatey/v/git.svg' alt=''/></td>
