Website: use Hex.pm on try.html

--- a/index.html
+++ b/index.html
@@ -131,10 +131,6 @@ I made the GitHub Badge Service.
   <td><img src='//img.shields.io/pypi/l/Django.svg' alt=''/></td>
   <td><code>http://img.shields.io/pypi/l/Django.svg</code></td>
   </tr>
-  <tr><th> Hex.pm: </th>
-  <td><img src='//img.shields.io/hexpm/l/poolboy.svg' alt=''/></td>
-  <td><code>http://img.shields.io/hexpm/l/poolboy.svg</code></td>
-  </tr>
   <tr><th> CocoaPods: </th>
   <td><img src='//img.shields.io/cocoapods/l/AFNetworking.svg' alt='' /></td>
   <td><code>http://img.shields.io/cocoapods/l/AFNetworking.svg</code></td>
@@ -142,6 +138,10 @@ I made the GitHub Badge Service.
   <tr><th> CocoaPods: </th>
   <td><img src='//img.shields.io/cocoapods/p/AFNetworking.svg' alt='' /></td>
   <td><code>http://img.shields.io/cocoapods/p/AFNetworking.svg</code></td>
+  </tr>
+  <tr><th> Hex.pm: </th>
+  <td><img src='//img.shields.io/hexpm/l/plug.svg' alt=''/></td>
+  <td><code>http://img.shields.io/hexpm/l/plug.svg</code></td>
   </tr>
 </tbody></table>
 <h3> Build </h3>
@@ -231,18 +231,6 @@ I made the GitHub Badge Service.
   <td><img src='//img.shields.io/pypi/dd/Django.svg' alt=''/></td>
   <td><code>http://img.shields.io/pypi/dd/Django.svg</code></td>
   </tr>
-  <tr><th> Hex.pm: </th>
-  <td><img src='//img.shields.io/hexpm/dw/plug.svg' alt=''/></td>
-  <td><code>http://img.shields.io/hexpm/dw/plug.svg</code></td>
-  </tr>
-  <tr><th> Hex.pm: </th>
-  <td><img src='//img.shields.io/hexpm/dd/plug.svg' alt=''/></td>
-  <td><code>http://img.shields.io/hexpm/dd/plug.svg</code></td>
-  </tr>
-  <tr><th> Hex.pm: </th>
-  <td><img src='//img.shields.io/hexpm/dt/plug.svg' alt=''/></td>
-  <td><code>http://img.shields.io/hexpm/dt/plug.svg</code></td>
-  </tr>
   <tr><th> Packagist: </th>
   <td><img src='//img.shields.io/packagist/dm/doctrine/orm.svg' alt=''/></td>
   <td><code>http://img.shields.io/packagist/dm/doctrine/orm.svg</code></td>
@@ -254,6 +242,18 @@ I made the GitHub Badge Service.
   <tr><th> Packagist: </th>
   <td><img src='//img.shields.io/packagist/dt/doctrine/orm.svg' alt=''/></td>
   <td><code>http://img.shields.io/packagist/dt/doctrine/orm.svg</code></td>
+  </tr>
+  <tr><th> Hex.pm: </th>
+  <td><img src='//img.shields.io/hexpm/dw/plug.svg' alt=''/></td>
+  <td><code>http://img.shields.io/hexpm/dw/plug.svg</code></td>
+  </tr>
+  <tr><th> Hex.pm: </th>
+  <td><img src='//img.shields.io/hexpm/dd/plug.svg' alt=''/></td>
+  <td><code>http://img.shields.io/hexpm/dd/plug.svg</code></td>
+  </tr>
+  <tr><th> Hex.pm: </th>
+  <td><img src='//img.shields.io/hexpm/dt/plug.svg' alt=''/></td>
+  <td><code>http://img.shields.io/hexpm/dt/plug.svg</code></td>
   </tr>
 </tbody></table>
 <h3> Version </h3>
@@ -270,10 +270,6 @@ I made the GitHub Badge Service.
   <td><img src='//img.shields.io/gem/v/formatador.svg' alt=''/></td>
   <td><code>http://img.shields.io/gem/v/formatador.svg</code></td>
   </tr>
-  <tr><th> Hex.pm: </th>
-  <td><img src='//img.shields.io/hexpm/v/plug.svg' alt=''/></td>
-  <td><code>http://img.shields.io/hexpm/v/plug.svg</code></td>
-  </tr>
   <tr><th> Hackage: </th>
   <td><img src='//img.shields.io/hackage/v/lens.svg' alt=''/></td>
   <td><code>http://img.shields.io/hackage/v/lens.svg</code></td>
@@ -285,6 +281,10 @@ I made the GitHub Badge Service.
   <tr><th> CocoaPods: </th>
   <td><img src='//img.shields.io/cocoapods/v/AFNetworking.svg' alt='' /></td>
   <td><code>http://img.shields.io/cocoapods/v/AFNetworking.svg</code></td>
+  </tr>
+  <tr><th> Hex.pm: </th>
+  <td><img src='//img.shields.io/hexpm/v/plug.svg' alt=''/></td>
+  <td><code>http://img.shields.io/hexpm/v/plug.svg</code></td>
   </tr>
   <tr><th> GitHub tag: </th>
   <td><img src='//img.shields.io/github/tag/strongloop/express.svg' alt=''/></td>
