--- a/try.html
+++ b/try.html
@@ -139,6 +139,10 @@ I made the GitHub Badge Service.
   <td><img src='/cocoapods/p/AFNetworking.svg' alt='' /></td>
   <td><code>http://img.shields.io/cocoapods/p/AFNetworking.svg</code></td>
   </tr>
+  <tr><th> Hex.pm: </th>
+  <td><img src='/hexpm/l/plug.svg' alt=''/></td>
+  <td><code>http://img.shields.io/hexpm/l/plug.svg</code></td>
+  </tr>
 </tbody></table>
 <h3> Build </h3>
 <table><tbody>
@@ -239,6 +243,18 @@ I made the GitHub Badge Service.
   <td><img src='/packagist/dt/doctrine/orm.svg' alt=''/></td>
   <td><code>http://img.shields.io/packagist/dt/doctrine/orm.svg</code></td>
   </tr>
+  <tr><th> Hex.pm: </th>
+  <td><img src='/hexpm/dw/plug.svg' alt=''/></td>
+  <td><code>http://img.shields.io/hexpm/dw/plug.svg</code></td>
+  </tr>
+  <tr><th> Hex.pm: </th>
+  <td><img src='/hexpm/dd/plug.svg' alt=''/></td>
+  <td><code>http://img.shields.io/hexpm/dd/plug.svg</code></td>
+  </tr>
+  <tr><th> Hex.pm: </th>
+  <td><img src='/hexpm/dt/plug.svg' alt=''/></td>
+  <td><code>http://img.shields.io/hexpm/dt/plug.svg</code></td>
+  </tr>
 </tbody></table>
 <h3> Version </h3>
 <table><tbody>
@@ -253,6 +269,7 @@ I made the GitHub Badge Service.
   <tr><th> Gem: </th>
   <td><img src='/gem/v/formatador.svg' alt=''/></td>
   <td><code>http://img.shields.io/gem/v/formatador.svg</code></td>
+  </tr>
   <tr><th> Hackage: </th>
   <td><img src='/hackage/v/lens.svg' alt=''/></td>
   <td><code>http://img.shields.io/hackage/v/lens.svg</code></td>
@@ -264,6 +281,10 @@ I made the GitHub Badge Service.
   <tr><th> CocoaPods: </th>
   <td><img src='/cocoapods/v/AFNetworking.svg' alt='' /></td>
   <td><code>http://img.shields.io/cocoapods/v/AFNetworking.svg</code></td>
+  </tr>
+  <tr><th> Hex.pm: </th>
+  <td><img src='/hexpm/v/plug.svg' alt=''/></td>
+  <td><code>http://img.shields.io/hexpm/v/plug.svg</code></td>
   </tr>
   <tr><th> GitHub tag: </th>
   <td><img src='/github/tag/strongloop/express.svg' alt=''/></td>
