website: make it HTML5 conformant.

--- a/try.html
+++ b/try.html
@@ -322,15 +322,19 @@ I made the GitHub Badge Service.
 
 <h3> Flat Style </h3>
 <table><tbody>
+  <tr>
   <td><img src='/travis/joyent/node.svg?style=flat' alt=''/></td>
   <td><code>http://img.shields.io/travis/joyent/node.svg?style=flat</code></td>
   </tr>
+  <tr>
   <td><img src='/travis/joyent/node/v0.6.svg?style=flat' alt=''/></td>
   <td><code>http://img.shields.io/travis/joyent/node/v0.6.svg?style=flat</code></td>
   </tr>
+  <tr>
   <td><img src='/gittip/JSFiddle.svg?style=flat' alt=''/></td>
   <td><code>http://img.shields.io/gittip/JSFiddle.svg?style=flat</code></td>
   </tr>
+  <tr>
   <td><img src='/coveralls/jekyll/jekyll.svg?style=flat' alt=''/></td>
   <td><code>http://img.shields.io/coveralls/jekyll/jekyll.svg?style=flat</code></td>
   </tr>
@@ -347,9 +351,9 @@ And tell us, we might be able to bring it to you anyway!
   data-show-count="false">Follow @Shields_io</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
 <a href='https://www.gittip.com/Shields/'><img src='/gittip/shields.svg?style=flat' alt='Tip us!'/></a>
-<iframe src="http://ghbtns.com/github-btn.html?user=badges&repo=shields&type=fork&count=true"
-  allowtransparency="true" frameborder="0" scrolling="0" width="95"
-  height="20"></iframe>
+<iframe src="http://ghbtns.com/github-btn.html?user=badges&amp;repo=shields&amp;type=fork&amp;count=true"
+  style="border:0; background-color:transparent"
+  width="95" height="20"></iframe>
 </p>
 
 <h2> Origin </h2>
