Website change to show difference between flat and flat-square.

--- a/index.html
+++ b/index.html
@@ -321,22 +321,17 @@ I made the GitHub Badge Service.
 </tbody></table>
 
 <h3> Flat Style </h3>
+<p>
+One of those two designs may become the default one. Vote by using them!
+</p>
 <table><tbody>
   <tr>
-  <td><img src='//img.shields.io/travis/joyent/node.svg?style=flat' alt=''/></td>
-  <td><code>http://img.shields.io/travis/joyent/node.svg?style=flat</code></td>
+  <td><img src='//img.shields.io/badge/style-flat-green.svg?style=flat' alt=''/></td>
+  <td><code>http://img.shields.io/badge/style-flat-green.svg?style=flat</code></td>
   </tr>
   <tr>
-  <td><img src='//img.shields.io/travis/joyent/node/v0.6.svg?style=flat' alt=''/></td>
-  <td><code>http://img.shields.io/travis/joyent/node/v0.6.svg?style=flat</code></td>
-  </tr>
-  <tr>
-  <td><img src='//img.shields.io/gittip/JSFiddle.svg?style=flat' alt=''/></td>
-  <td><code>http://img.shields.io/gittip/JSFiddle.svg?style=flat</code></td>
-  </tr>
-  <tr>
-  <td><img src='//img.shields.io/coveralls/jekyll/jekyll.svg?style=flat' alt=''/></td>
-  <td><code>http://img.shields.io/coveralls/jekyll/jekyll.svg?style=flat</code></td>
+  <td><img src='//img.shields.io/badge/style-flat--squared-green.svg?style=flat-square' alt=''/></td>
+  <td><code>http://img.shields.io/badge/style-flat--squared-green.svg?style=flat-square</code></td>
   </tr>
 </tbody></table>
 
