--- a/try.html
+++ b/try.html
@@ -158,6 +158,11 @@ I made the GitHub Badge Service.
   <td><img src='/teamcity/codebetter/bt428.svg' alt=''/></td>
   <td><code>http://img.shields.io/teamcity/codebetter/bt428.svg</code></td>
   </tr>
+  </tr>
+  <tr><th> TeamCity: </th>
+  <td><img src='/teamcity/http/teamcity.jetbrains.com/bt345.svg' alt=''/></td>
+  <td><code>http://img.shields.io/teamcity/http/teamcity.jetbrains.com/bt345.svg</code></td>
+  </tr>
   <tr><th> AppVeyor: </th>
   <td><img src='/appveyor/ci/gruntjs/grunt.svg' alt=''/></td>
   <td><code>http://img.shields.io/appveyor/ci/gruntjs/grunt.svg</code></td>
