--- a/try.html
+++ b/try.html
@@ -159,9 +159,13 @@ I made the GitHub Badge Service.
   <td><code>http://img.shields.io/teamcity/codebetter/bt428.svg</code></td>
   </tr>
   </tr>
-  <tr><th> TeamCity: </th>
-  <td><img src='/teamcity/http/teamcity.jetbrains.com/bt345.svg' alt=''/></td>
-  <td><code>http://img.shields.io/teamcity/http/teamcity.jetbrains.com/bt345.svg</code></td>
+  <tr><th> TeamCity (simple build status): </th>
+  <td><img src='/teamcity/http/teamcity.jetbrains.com/s/bt345.svg' alt=''/></td>
+  <td><code>http://img.shields.io/teamcity/http/teamcity.jetbrains.com/s/bt345.svg</code></td>
+  </tr>
+  <tr><th> TeamCity (full build status): </th>
+  <td><img src='/teamcity/http/teamcity.jetbrains.com/e/bt345.svg' alt=''/></td>
+  <td><code>http://img.shields.io/teamcity/http/teamcity.jetbrains.com/e/bt345.svg</code></td>
   </tr>
   <tr><th> AppVeyor: </th>
   <td><img src='/appveyor/ci/gruntjs/grunt.svg' alt=''/></td>
