--- a/try.html
+++ b/try.html
@@ -91,9 +91,9 @@ I made the GitHub Badge Service.
 
 <h3> Miscellaneous </h3>
 <table><tbody>
-  <tr><th> Gittip: </th>
-  <td><img src='/gittip/JSFiddle.svg' alt=''/></td>
-  <td><code>http://img.shields.io/gittip/JSFiddle.svg</code></td>
+  <tr><th> Gratipay: </th>
+  <td><img src='/gratipay/JSFiddle.svg' alt=''/></td>
+  <td><code>http://img.shields.io/gratipay/JSFiddle.svg</code></td>
   </tr>
   <tr><th> Code Climate: </th>
   <td><img src='/codeclimate/github/kabisaict/flow.svg' alt=''/></td>
