added myself to the list of contributors added Maven Central to the list of supported services

--- a/index.html
+++ b/index.html
@@ -328,6 +328,10 @@ I made the GitHub Badge Service.
   <td><img src='//img.shields.io/puppetforge/v/vStone/percona.svg' alt=''/></td>
   <td><code>http://img.shields.io/puppetforge/v/vStone/percona.svg</code></td>
   </tr>
+  <tr><th> Maven Central: </th>
+  <td><img src='//img.shields.io/maven-central/v/org.apache.maven/apache-maven.svg' alt=''/></td>
+  <td><code>http://img.shields.io/maven-central/v/org.apache.maven/apache-maven.svg</code></td>
+  </tr>
 </tbody></table>
 
 <h3> Issues </h3>
@@ -455,6 +459,9 @@ All the activity and the code sits
 </a>
 <a class='photo' href='https://github.com/khellang'>
   <img alt='khellang' src='https://gravatar.com/avatar/b3616645c168b0b8a65e109a6b1cb010'>
+</a>
+<a class='photo' href='https://github.com/nitram509'>
+  <img alt='nitram509' src='https://www.gravatar.com/avatar/fa01e907fd400c42d481f431c4410954.png'>
 </a>
 
 <p><small>:wq</small></p>
